# otus-cpp

./: .clang-format  .gitignore  CMakeLists.txt  ip_filter.cpp
.github/workflows/: release.yml
src/: CMakeLists.txt  allocator.h  container.h  ip_filter.hpp  main.cpp
tests/: CMakeLists.txt  alllocator_tests.cpp  ip_filter_tests.cpp
